@@ -29,47 +29,41 @@
 
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <configuration>
-                    <includes>com.*</includes>
-                    <destFile>${project.basedir}/target/jacoco.exec</destFile>
-                    <excludes>
-                        <exclude>*.class</exclude>
-                    </excludes>
-                    <rules>
-                        <rule>
-                            <limits>
-                                <limit>
-                                    <counter>INSTRUCTION</counter>
-                                    <minmun>0.80</minmun>
-                                </limit>
-                                <limit>
-                                    <counter>CLASS</counter>
-                                    <value>MISSEDCOUNT</value>
-                                    <maximun>10</maximun>
-                                </limit>
-                                <limit>
-                                    <counter>LINE</counter>
-                                    <minimun>0.50</minimun>
-                                </limit>
-                                <limit>
-                                    <counter>BRANCH</counter>
-                                    <minimun>0.999</minimun>
-                                </limit>
-                            </limits>
-                        </rule>
-                    </rules>
-                </configuration>
+                <version>0.8.2</version>
+<!--                <configuration>-->
+<!--                    <includes>com.*</includes>-->
+<!--                    <destFile>${project.basedir}/target/jacoco.exec</destFile>-->
+<!--                    <excludes>-->
+<!--                        <exclude>*.class</exclude>-->
+<!--                    </excludes>-->
+<!--                    <rules>-->
+<!--                        <rule>-->
+<!--                            <limits>-->
+<!--                                <limit>-->
+<!--                                    <counter>LINE</counter>-->
+<!--                                    <minimun>0.50</minimun>-->
+<!--                                </limit>-->
+<!--                            </limits>-->
+<!--                        </rule>-->
+<!--                    </rules>-->
+<!--                </configuration>-->
                 <executions>
                     <execution>
-                        <id>pre-test</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
                     <execution>
-                        <id>post-test</id>
+                        <id>report</id>
                         <phase>test</phase>
                         <goals>
                             <goal>report</goal>
